<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <android.support.v4.view.ViewPager
        android:id="@+id/myguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/endtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:id="@+id/text1"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/a_0002"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_0003"
            android:id="@+id/text2"
            android:layout_toRightOf="@+id/text1"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:textSize="24dp"/>

        <TextView
            android:layout_toRightOf="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_0004"
            android:layout_centerInParent="true"
            android:textSize="18dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@mipmap/btn_guide_bg"
        android:gravity="center"
        android:text=""
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@mipmap/btn_guide_bg"
        android:gravity="center"
        android:text=""
        android:textSize="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/actionbar_size"
        android:layout_marginRight="20dp"
        android:text="@string/a_0005"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/actionbar_size"
        android:layout_marginLeft="20dp"
        android:text="@string/a_0006"
        android:textColor="@color/colorBlack"
        android:visibility="gone"/>
</RelativeLayout>