<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/title"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/a_0109"
        android:textColor="@color/color_text_normal"
        android:textSize="13dp"/>

    <View
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:id="@+id/line"
        android:layout_height="0.5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/bg_common"/>
    <TextView
        android:layout_below="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/select_album"
        android:text="@string/a_0099"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"/>
    <View
        android:layout_below="@+id/select_album"
        android:layout_width="match_parent"
        android:id="@+id/line2"
        android:layout_height="0.5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/bg_common"/>
    <TextView
        android:layout_below="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/select_default"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/a_0110"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"/>
</RelativeLayout>


