<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_input_bg_default">

        <EditText
            android:id="@+id/et_phone"
            style="@style/common.text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/a_0054"
            android:maxLength="16"
            android:padding="8dip"
            android:textColor="@color/colorBlack"
            android:textSize="12dp"/>
        <ImageView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"
            android:id="@+id/iv_phone_del"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_cancel"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_input_bg_default"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_auth_code"
            style="@style/common.text.edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/a_0055"
            android:maxLength="10"
            android:padding="6dip"
            android:textColor="@color/colorBlack"
            android:textSize="12dp"/>

        <Button
            android:id="@+id/btn_getCode"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/common_bg"
            android:gravity="center"
            android:text="@string/a_0040"
            android:textColor="@color/color_clickable_text_accent"
            android:textSize="12dp"
            />

        <ImageView
            android:layout_toLeftOf="@+id/btn_getCode"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/iv_code_del"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_cancel"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_input_bg_default">

        <EditText
            android:id="@+id/et_phone_password"
            style="@style/common.text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/a_0041"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="6dip"
            android:textColor="@color/colorBlack"
            android:textSize="12dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/iv_password_del"
            android:layout_height="15dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_cancel"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/common.button.normal"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="12dip"
        android:text="@string/a_0038"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/big_gap_between_view"
        android:text="@string/a_0056"
        android:textColor="@color/color_text_tip"
        android:textSize="11dp"/>
</LinearLayout>