<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/common"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:background="@color/colorWindowBackground"
        android:layout_height="@dimen/small_padding_in_view"/>

    <TextView
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginRight="@dimen/normal_gap_between_view"
        android:id="@+id/detailinfo_goup_title"
        android:layout_below="@+id/top_divider"
        android:text="@string/a_0057"
        android:drawableLeft="@mipmap/ic_left_index"
        style="@style/common.text.title"
        android:drawablePadding="@dimen/small_gap_between_view"
        android:layout_margin="@dimen/normal_gap_between_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        style="@style/common.button"
        android:layout_below="@+id/detailinfo_goup_title"
        android:id="@+id/middle_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"/>

    <TextView
        android:id="@+id/detailinfo_group_expr"
        android:layout_below="@+id/detailinfo_goup_title"
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        android:text="@string/a_0256"
        style="@style/common.text.content"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailinfo_group_ver"
        android:layout_below="@+id/detailinfo_group_expr"
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        android:text="@string/a_0255"
        style="@style/common.text.content"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/detailinfo_group_size"
        android:layout_below="@+id/detailinfo_group_ver"
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        android:text="@string/a_0254"
        style="@style/common.text.content"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/detailinfo_group_lang"
        android:layout_below="@+id/detailinfo_group_size"
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        android:text="@string/a_0253"
        style="@style/common.text.content"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/detailinfo_group_lowversion"
        android:layout_below="@+id/detailinfo_group_lang"
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        android:text="@string/a_0252"
        style="@style/common.text.content"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailinfo_group_mau"
        android:layout_below="@+id/detailinfo_group_lowversion"
        android:layout_marginLeft="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        android:text="@string/a_0251"
        style="@style/common.text.content"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <!-- value -->
    <TextView
        android:id="@+id/detailinfo_group_expr_value"
        android:layout_toRightOf="@id/detailinfo_group_expr"
        android:layout_below="@+id/detailinfo_goup_title"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        tools:text="999680次"
        style="@style/common.text.normal"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailinfo_group_ver_value"
        android:layout_toRightOf="@+id/detailinfo_group_ver"
        android:layout_below="@+id/detailinfo_group_expr"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        tools:text="3.0.1"
        style="@style/common.text.normal"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailinfo_group_size_value"
        android:layout_below="@+id/detailinfo_group_ver"
        android:layout_toRightOf="@+id/detailinfo_group_size"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        tools:text="781M"
        style="@style/common.text.normal"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailinfo_group_lang_value"
        android:layout_below="@+id/detailinfo_group_size"
        android:layout_toRightOf="@+id/detailinfo_group_lang"
        android:layout_marginRight="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        android:maxLines="3"
        tools:text="简体中文"
        style="@style/common.text.normal"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/detailinfo_group_lowversion_value"
        android:layout_below="@+id/detailinfo_group_lang"
        android:layout_toRightOf="@+id/detailinfo_group_lowversion"
        android:layout_marginRight="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        tools:text="安卓2.0"
        style="@style/common.text.normal"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailinfo_group_mau_value"
        android:layout_below="@+id/detailinfo_group_lowversion"
        android:layout_toRightOf="@id/detailinfo_group_mau"
        android:layout_marginRight="@dimen/normal_gap_between_view"
        android:layout_marginBottom="@dimen/small_gap_between_view"
        tools:text="腾讯"
        style="@style/common.text.normal"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>